Ajout de la deuxième activité forum pour les discussion

--- a/app/src/main/res/layout/setup_profil_activity.xml
+++ b/app/src/main/res/layout/setup_profil_activity.xml
@@ -13,7 +13,7 @@
         app:layout_constraintTop_toBottomOf="@+id/cardView3">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/buttonTalk"
             style="@style/buttonpersonnalise"
             android:layout_width="300dp"
             android:layout_height="60dp"
@@ -36,9 +36,12 @@
             android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/pseudo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/pseudo" />
+                android:hint="@string/pseudo"
+                android:inputType="text"/>
+
         </com.google.android.material.textfield.TextInputLayout>
 
     </androidx.cardview.widget.CardView>
