--- a/app/src/main/res/layout/forum_activity.xml
+++ b/app/src/main/res/layout/forum_activity.xml
@@ -13,15 +13,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="10dp"
-        android:layout_marginBottom="15dp"
+        android:layout_marginBottom="10dp"
+        android:backgroundTint="@color/blue"
         android:clickable="true"
+        android:contentDescription="TODO"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.88"
         app:layout_constraintStart_toEndOf="@+id/cardView4"
-        app:srcCompat="@drawable/baseline_send_24"
-        android:backgroundTint="@color/blue"
-        android:contentDescription="TODO" />
+        app:srcCompat="@drawable/baseline_send_24" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView4"
@@ -29,26 +29,30 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginEnd="80dp"
+        android:layout_marginBottom="10dp"
         app:cardCornerRadius="20dp"
+        app:cardElevation="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.97">
+        app:layout_constraintStart_toStartOf="parent">
 
         <com.google.android.material.textfield.TextInputLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:hintEnabled="false">
+            android:filterTouchesWhenObscured="false"
+            android:keyboardNavigationCluster="false">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/msg"
-                android:maxHeight="120dp"/>
+                android:imeOptions="flagNoExtractUi"
+                android:inputType="textMultiLine"
+                android:maxHeight="120dp"
+                android:scrollbars="vertical" />
 
         </com.google.android.material.textfield.TextInputLayout>
-    </androidx.cardview.widget.CardView>
 
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
