--- a/app/src/main/res/layout/setup_profil_activity.xml
+++ b/app/src/main/res/layout/setup_profil_activity.xml
@@ -36,7 +36,7 @@
             android:layout_height="wrap_content">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/pseudo"
+                android:id="@+id/ProfilPseudo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/pseudo"
