--- a/app/src/main/res/layout/setup_profil_activity.xml
+++ b/app/src/main/res/layout/setup_profil_activity.xml
@@ -40,7 +40,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/pseudo"
-                android:inputType="text"/>
+                android:inputType="text"
+                android:maxLength="20" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
