--- a/app/src/main/res/layout/forum_activity.xml
+++ b/app/src/main/res/layout/forum_activity.xml
@@ -1,12 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/blueDark"
     android:autofillHints="false"
     tools:ignore="MissingConstraints">
+
+    <ListView
+        android:id="@+id/list_messages"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/sendMsg"
@@ -22,6 +29,7 @@
         app:layout_constraintHorizontal_bias="0.88"
         app:layout_constraintStart_toEndOf="@+id/cardView4"
         app:srcCompat="@drawable/baseline_send_24" />
+
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView4"
@@ -43,6 +51,7 @@
             android:keyboardNavigationCluster="false">
 
             <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/userTexForMsg"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/msg"
