--- a/app/src/main/res/layout/setup_profil_activity.xml
+++ b/app/src/main/res/layout/setup_profil_activity.xml
@@ -8,11 +8,10 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView5"
         style="@style/cardviewbtn"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="25dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cardView3"
-        app:layout_constraintVertical_bias="0.18">
+        app:layout_constraintTop_toBottomOf="@+id/cardView3">
 
         <Button
             android:id="@+id/buttonTalk"
