--- a/app/src/main/res/layout/setup_profil_activity.xml
+++ b/app/src/main/res/layout/setup_profil_activity.xml
@@ -88,7 +88,9 @@
         android:id="@+id/bottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/blueDark"
+        android:background="@color/blue"
+        app:itemTextColor="@drawable/selector_item"
+        app:itemIconTint="@drawable/selector_item"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
