Les liste de message ca marche, on arrive à envoyer un message dans un salon

--- a/app/src/main/res/layout/chat_activity.xml
+++ b/app/src/main/res/layout/chat_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout"
     android:layout_width="match_parent"
@@ -9,59 +9,60 @@
     android:autofillHints="false"
     tools:ignore="MissingConstraints">
 
-    <ListView
-        android:id="@+id/list_messages"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/sendMsg"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:backgroundTint="@color/blue"
-        android:clickable="true"
-        android:contentDescription="TODO"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.88"
-        app:layout_constraintStart_toEndOf="@+id/cardView4"
-        app:srcCompat="@drawable/baseline_send_24" />
-
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView4"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="80dp"
-        android:layout_marginBottom="10dp"
-        app:cardCornerRadius="20dp"
-        app:cardElevation="10dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        android:padding="10dp"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true">
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView4"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:filterTouchesWhenObscured="false"
-            android:keyboardNavigationCluster="false">
+            android:layout_weight="80"
+            android:layout_marginEnd="10dp"
+            app:cardCornerRadius="20dp">
 
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/userTexForMsg"
+            <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/msg"
-                android:imeOptions="flagNoExtractUi"
-                android:inputType="textMultiLine"
-                android:maxHeight="120dp"
-                android:scrollbars="vertical" />
 
-        </com.google.android.material.textfield.TextInputLayout>
+                android:filterTouchesWhenObscured="false"
+                android:keyboardNavigationCluster="false">
 
-    </androidx.cardview.widget.CardView>
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/userTexForMsg"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/msg"
+                    android:imeOptions="flagNoExtractUi"
+                    android:inputType="textMultiLine"
+                    android:maxHeight="120dp"
+                    android:scrollbars="vertical" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+            </com.google.android.material.textfield.TextInputLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/sendMsg"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:backgroundTint="@color/blue"
+            android:clickable="true"
+            android:contentDescription="TODO"
+            app:srcCompat="@drawable/baseline_send_24" />
+
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/messageRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/cardView4"
+        tools:ignore="NotSibling" />
+
+</RelativeLayout>
