--- a/app/src/main/res/layout/chat_activity.xml
+++ b/app/src/main/res/layout/chat_activity.xml
@@ -9,10 +9,17 @@
     android:autofillHints="false"
     tools:ignore="MissingConstraints">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/messageRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_above="@+id/linearLayout"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/linearLayout"
         android:padding="10dp"
         android:orientation="horizontal"
         android:layout_alignParentBottom="true">
@@ -56,13 +63,5 @@
             app:srcCompat="@drawable/baseline_send_24" />
 
     </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/messageRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_above="@+id/cardView4"
-        tools:ignore="NotSibling" />
 
 </RelativeLayout>
