Ajout de la date

--- a/app/src/main/res/layout/message_custom_sent.xml
+++ b/app/src/main/res/layout/message_custom_sent.xml
@@ -49,6 +49,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/userNameSending" />
 
                 <TextView
+                    android:id="@+id/userMessageTimeSending"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toBottomOf="@+id/userMessageSending"
