--- a/app/src/main/res/layout/message_custom_received.xml
+++ b/app/src/main/res/layout/message_custom_received.xml
@@ -49,6 +49,7 @@
                     app:layout_constraintTop_toBottomOf="@+id/userNameReceiving" />
 
                 <TextView
+                    android:id="@+id/userMessageTimeReceiving"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toBottomOf="@+id/userMessageReceiving"
