--- a/app/src/main/res/layout/single_forum.xml
+++ b/app/src/main/res/layout/single_forum.xml
@@ -1,33 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:padding="10dp">
+    android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/forumTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/blue"
+            android:clickable="true"
+            android:focusable="true"
             android:text="Forum Title"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:id="@+id/forumTitle"
-            android:focusable="true"
-            android:clickable="true"
-            />
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="16dp" />
 
         <TextView
+            android:id="@+id/forumDescription"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:focusable="true"
             android:text="Forum Description"
             android:textSize="15sp"
-            android:id="@+id/forumDescription"
-            />
+            app:layout_constraintTop_toBottomOf="@+id/forumTitle"
+            tools:layout_editor_absoluteX="34dp" />
 
-    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
