--- a/app/src/main/res/layout/single_forum.xml
+++ b/app/src/main/res/layout/single_forum.xml
@@ -5,28 +5,34 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/forumTitle"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/blue"
-            android:clickable="true"
-            android:focusable="true"
-            android:text="Forum Title"
-            android:textSize="20sp"
-            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:layout_editor_absoluteX="16dp" />
+            android:orientation="vertical"
+            >
 
-        <TextView
-            android:id="@+id/forumDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:focusable="true"
-            android:text="Forum Description"
-            android:textSize="15sp"
-            app:layout_constraintTop_toBottomOf="@+id/forumTitle"
-            tools:layout_editor_absoluteX="34dp" />
+                <TextView
+                    android:id="@+id/forumTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/blue"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:text="Forum Title"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
 
+                <TextView
+                    android:id="@+id/forumDescription"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:focusable="true"
+                    android:text="Forum Description"
+                    android:textSize="20sp" />
+        </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
