style on forums + redirect users on forum page before chat

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="green">#B2F37C</color>
     <color name="blue">#5CBCF9</color>
     <color name="blueDark">#1C4651</color>
+    <color name="blue50">#33718E</color>
+    <color name="blue40">#428DB6</color>
 </resources>
