--- a/app/src/main/res/layout/single_forum.xml
+++ b/app/src/main/res/layout/single_forum.xml
@@ -3,36 +3,66 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="10dp">
 
-        <LinearLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:orientation="vertical"
-            >
+            android:layout_height="match_parent"
+            android:layout_margin="15dp"
+            app:cardCornerRadius="15dp"
+            tools:layout_editor_absoluteX="15dp">
 
-                <TextView
-                    android:id="@+id/forumTitle"
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:background="@color/blue"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:text="Forum Title"
-                    android:textSize="30sp"
-                    android:textStyle="bold" />
+                    android:layout_height="match_parent"
+                    android:background="@color/blue40"
 
-                <TextView
-                    android:id="@+id/forumDescription"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:focusable="true"
-                    android:text="Forum Description"
-                    android:textSize="20sp" />
-        </LinearLayout>
+                    android:paddingRight="10dp"
+                    android:paddingBottom="10dp">
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginEnd="9dp"
+                            android:layout_marginBottom="10dp"
+                            android:orientation="vertical"
+                            app:layout_constraintBottom_toBottomOf="parent"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent">
+
+                                <androidx.cardview.widget.CardView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    app:cardCornerRadius="15dp">
+
+                                        <TextView
+                                            android:id="@+id/forumTitle"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:background="@color/blue50"
+                                            android:clickable="true"
+                                            android:focusable="true"
+                                            android:padding="5dp"
+                                            android:text="Forum Title"
+                                            android:textColor="@color/white"
+                                            android:textSize="30sp"
+                                            android:textStyle="bold" />
+                                </androidx.cardview.widget.CardView>
+
+                                <TextView
+                                    android:id="@+id/forumDescription"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:focusable="true"
+                                    android:padding="5dp"
+                                    android:text="Forum Description"
+                                    android:textColor="@color/white"
+                                    android:textSize="20sp" />
+
+                        </LinearLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
