Le pseudo sauvegarder ne s'affichait plus. Background des activities en blueDark. Fixation des majuscules automatiques des input

--- a/app/src/main/res/layout/chat_activity.xml
+++ b/app/src/main/res/layout/chat_activity.xml
@@ -62,7 +62,7 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/msg"
                     android:imeOptions="flagNoExtractUi"
-                    android:inputType="textMultiLine"
+                    android:inputType="textMultiLine|textCapSentences"
                     android:maxHeight="120dp"
                     android:maxLength="256"
                     android:scrollbars="vertical" />
