--- a/app/src/main/res/layout/forum_activity.xml
+++ b/app/src/main/res/layout/forum_activity.xml
@@ -30,12 +30,19 @@
         android:id="@+id/addForumButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/addForum"
-        android:id="@+id/addForumButton"
-        android:layout_marginBottom="20dp"
+        android:layout_above="@id/changeServerButton"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:layout_above="@id/bottomNavigationView" />
+        android:text="@string/addForum" />
+
+    <Button
+        android:id="@+id/changeServerButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/changeServer"
+        android:layout_centerInParent="true"
+        android:layout_above="@id/bottomNavigationView"/>
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNavigationView"
